--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
     <body>
         <div>Hello Project 4</div> 
         <h1>This is Project 4</h1>
+        <h2>This is from dev branch</h2>
     </body>
 </html>
